adding new page

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script defer src="main.js"></script>
 </head>
-</head>
 <body>
 	
 	<div class="slider">
     <ul class="slides">
 
       <li>
-        <img src="1.jpg"> 
+        <img src="img/1.jpg"> 
         <div class="caption center-align">
           <h3 class="black-text">Dear Emily,</h3>
           <h5 class="light black-text">Hope you enjoy this card I made <br> for you while you are away.</h5>
@@ -27,7 +26,7 @@
       </li>
 
       <li>
-        <img src="2.jpg"> 
+        <img src="img/2.jpg"> 
         <div class="caption left-align">
           <h3>It is just a litle something to show that I am thinking of you..</h3>
           <h5 class="light grey-text text-lighten-3">All the time.</h5>
@@ -35,7 +34,7 @@
       </li>
 
       <li>
-        <img src="3.jpg"> 
+        <img src="img/3.jpg"> 
         <div class="caption left-align">
           <h3 class="black-text">You are my rock</h3>
           <h5 class="light black-text">The one who calms me down and relxes me, <br> you are the one who knows me best.</h5>
@@ -43,7 +42,7 @@
       </li>
 
       <li>
-        <img src="4.jpg"> 
+        <img src="img/4.jpg"> 
         <div class="caption center-align">
           <h3 class="black-text">You are the only person I trust...</h3>
           <h5 class="light black-text">with everything in my life.</h5>
@@ -52,7 +51,7 @@
 
 
       <li>
-        <img src="5.jpg"> 
+        <img src="img/5.jpg"> 
         <div class="caption center-align">
           <h3>I KNOW you are having a blast</h3>
           <h5 class="light grey-text text-lighten-3">traveling around Europe with your friends learning, exploring and of course eating.</h5>
@@ -60,7 +59,7 @@
       </li>
 
       <li>
-        <img src="6.jpg"> 
+        <img src="img/6.jpg"> 
         <div class="caption left-align">
           <h3>But I also know it is hard to leave</h3>
           <h5 class="light grey-text text-lighten-3">for both of us.</h5>
@@ -68,7 +67,7 @@
       </li>
 
       <li>
-        <img src="7.jpg"> 
+        <img src="img/7.jpg"> 
         <div class="caption right-align">
           <h3>Of course I miss you,</h3>
           <h5 class="light grey-text text-lighten-3">and I assume you feel the same way.</h5>
@@ -76,7 +75,7 @@
       </li>
 
       <li>
-        <img src="8.jpg"> 
+        <img src="img/8.jpg"> 
         <div class="caption center-align">
           <h3 class="black-text">But just always remeber...</h3>
           <h5 class="light black-text">I love you more than anything in this world...</h5>
@@ -85,12 +84,14 @@
       </li>
 
       <li>
-        <img src="9.jpg"> 
+        <img src="img/9.jpg"> 
         <div class="caption center-align">
-          <h3>Until Next Time ... </h3>
+          <h3>Click below for more ... </h3>
           <br>
           <h3>Love Always, </h3>
           <h5 class="light grey-text text-lighten-3">Jack.</h5>
+          <br><br>
+          <button><a href="home.html" class="waves-effect waves-light btn">Click</a></button>
         </div>
       </li>
 
