finished new additionwith place holder text

--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
       <li>
         <img src="img/1.jpg"> 
         <div class="caption center-align">
-          <h3 class="black-text">Dear Emily,</h3>
-          <h5 class="light black-text">Hope you enjoy this card I made <br> for you while you are away.</h5>
+          <h2 class="black-text">Dear Emily,</h2>
+          <h4 class="light black-text">Hope you enjoy this card I made <br> for you while you are away.</h4>
         </div>
       </li>
 
       <li>
         <img src="img/2.jpg"> 
         <div class="caption left-align">
-          <h3>It is just a litle something to show that I am thinking of you..</h3>
-          <h5 class="light grey-text text-lighten-3">All the time.</h5>
+          <h2>It is just a litle something to show that I am thinking of you..</h2>
+          <h4 class="light grey-text text-lighten-3">All the time.</h4>
         </div>
       </li>
 
       <li>
         <img src="img/3.jpg"> 
         <div class="caption left-align">
-          <h3 class="black-text">You are my rock</h3>
-          <h5 class="light black-text">The one who calms me down and relxes me, <br> you are the one who knows me best.</h5>
+          <h2 class="white-text">You are my rock</h2>
+          <h4 class="light white-text">The one who calms me down and relxes me, <br> you are the one who knows me best.</h4>
         </div>
       </li>
 
       <li>
         <img src="img/4.jpg"> 
         <div class="caption center-align">
-          <h3 class="black-text">You are the only person I trust...</h3>
-          <h5 class="light black-text">with everything in my life.</h5>
+          <h2 class="black-text">You are the only person I trust...</h2>
+          <h4 class="light black-text">with everything in my life.</h4>
         </div>
       </li>      
 
@@ -53,45 +53,45 @@
       <li>
         <img src="img/5.jpg"> 
         <div class="caption center-align">
-          <h3>I KNOW you are having a blast</h3>
-          <h5 class="light grey-text text-lighten-3">traveling around Europe with your friends learning, exploring and of course eating.</h5>
+          <h2>I KNOW you are having a blast</h2>
+          <h4 class="light grey-text text-lighten-3">traveling around Europe with your friends learning, exploring and of course eating.</h4>
         </div>
       </li>
 
       <li>
         <img src="img/6.jpg"> 
         <div class="caption left-align">
-          <h3>But I also know it is hard to leave</h3>
-          <h5 class="light grey-text text-lighten-3">for both of us.</h5>
+          <h2>But I also know it is hard to leave</h2>
+          <h4 class="light grey-text text-lighten-3">for both of us.</h4>
         </div>
       </li>
 
       <li>
         <img src="img/7.jpg"> 
         <div class="caption right-align">
-          <h3>Of course I miss you,</h3>
-          <h5 class="light grey-text text-lighten-3">and I assume you feel the same way.</h5>
+          <h2>Of course I miss you,</h2>
+          <h4 class="light grey-text text-lighten-3">and I assume you feel the same way.</h4>
         </div>
       </li>
 
       <li>
         <img src="img/8.jpg"> 
         <div class="caption center-align">
-          <h3 class="black-text">But just always remeber...</h3>
-          <h5 class="light black-text">I love you more than anything in this world...</h5>
-          <h5 class="light black-text">and you will always be my Emily</h5>
+          <h2 class="black-text">But just always remeber...</h2>
+          <h4 class="light black-text">I love you more than anything in this world...</h4>
+          <h4 class="light black-text">and you will always be my Emily</h4>
         </div>
       </li>
 
       <li>
         <img src="img/9.jpg"> 
         <div class="caption center-align">
-          <h3>Click below for more ... </h3>
+          <h2>Click below for more ... </h2>
           <br>
-          <h3>Love Always, </h3>
-          <h5 class="light grey-text text-lighten-3">Jack.</h5>
+          <h2>Love Always, </h2>
+          <h4 class="light grey-text text-lighten-3">Jack.</h4>
           <br><br>
-          <button><a href="home.html" class="waves-effect waves-light btn">Click</a></button>
+          <button><a href="home.html" class="waves-effect waves-light btn-large">See More Here!</a></button>
         </div>
       </li>
 
