--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 		</div>
 
 	<div class="parallax">
-		<img src="{% static "images/hotel.jpg" %}">
+		<img src="img/10.jpg">
 	</div>
 </div>
 
@@ -49,7 +49,7 @@
 		</div>
 
 	<div class="parallax">
-		<img src="{% static "images/paralax.jpg" %}">
+		<img src="img/15.jpg">
 	</div>
 </div>
 
@@ -76,7 +76,7 @@
 		</div>
 
 	<div class="parallax">
-		<img src="{% static "images/central_park.jpg" %}">
+		<img src="img/12.jpg">
 	</div>
 </div>
 
@@ -104,7 +104,7 @@
 		</div>
 
 	<div class="parallax">
-		<img src="{% static "images/central_park.jpg" %}">
+		<img src="img/13.jpg">
 	</div>
 </div>
 
