finished emily new website

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 <div class="parallax-container valign-wrapper">
 		<div class="container">
 			<div class="row left">
-				<h5 id="shift" class="header col s12 m12 l12 white-text">Like Having Your Own <br> Personal Real Estate Agent</h5>
+				<h4 id="shift" class="header col s12 m12 l12 white-text">A friend is someone who knows all about you, <br> and still loves you </h4>
 			</div>
 		</div>
 
@@ -32,9 +32,9 @@
 		<div class="row">
 			<div class="col s12 center">
 				<h3><i class="mdi-content-send blue-grey-text"></i></h3>
-				<h4>How We Did It</h4>
+				<h4>Dear Emily,</h4>
 					<p class="center-align">
-					 Before we were able to collect all our data, we first had to know what data was available, accessible and scalable. This led us to census data, data collected at the state and city level, as well as various API'sincluding Google Maps, Yelp, and Streeteasy. One key requirement, apparent from the outset, was to reference any data we collected to a particular NYC neighborhood. That meant storing data categorized at the neighborhood level. However, more often than not, data available was by geographical coordinates or zip code, leading us to create a mapping to the appropriate neighborhood. </p>
+					 It has barely been a week but somehow it feels like you have been away for a month. Thankfully, so far we have been speaking pretty often, but I guess you never really realize how big a part of your life someone is until they are gone. Now I sit here, trying to write you something, and the feelings rush back, but the words seem hard to find. <br> For starters, let me just say, I am so happy for you. It looks like you are traveling around Europe, literally a different city every other day, and packing so much into each and every moment. I love the fact that you are enjoying and exploring so much, and of course wish I was there by your side. You are going to continue to have the best time and I can not wait for you to get back with stories, pictures (and of course gifts), but most of all, with yourself lol.</p>
 			</div>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 <div class="parallax-container valign-wrapper">
 		<div class="container">
 			<div class="row left">
-				<h5 id="shift" class="header col s12 white-text right-align">We have done the research for you</h5>
+				<h4 id="shift" class="header col s12 white-text right-align">Having a person there to always make me smile.</h4>
 			</div>
 		</div>
 
@@ -59,9 +59,9 @@
 		<div class="row">
 			<div class="col s12 center">
 				<h3><i class="mdi-content-send blue-grey-text"></i></h3>
-				<h4>How We Did It</h4>
 					<p class="center-align">
-					 Before we were able to collect all our data, we first had to know what data was available, accessible and scalable. This led us to census data, data collected at the state and city level, as well as various API'sincluding Google Maps, Yelp, and Streeteasy. One key requirement, apparent from the outset, was to reference any data we collected to a particular NYC neighborhood. That meant storing data categorized at the neighborhood level. However, more often than not, data available was by geographical coordinates or zip code, leading us to create a mapping to the appropriate neighborhood. </p>
+					I walk around telling people it has been three and a half years since we met. And yes, while that might sounds like a really long time (which it kinda is), it feels like we have known each other for so much longer. Everything I do, almost every day, I am either thinking about you, doing it for you or because of you, or just doing it with you in the back of my mind. Over the time we spent together we have permeated each other's lives, changed each others personalities and blended together to become something pretty amazing, if I do say so myself.<br> <br>
+					I would be remise if I didn’t mention how hard these past several weeks have been. I know I have brought a lot of it into our relationship and vented to you about it more than a few times. But constantly, like almost everything else in life, you have continually and unwaveringly, supported me, cheered me up and keep my emotions high. For that I will always thank you and I look forward to continuing this aspect of the relationship for many years to come. </p>
 			</div>
 		</div>
 	</div>
@@ -71,7 +71,7 @@
 <div class="parallax-container valign-wrapper">
 		<div class="container">
 			<div class="row left">
-				<h5 id="shift" class="header col s12 white-text">Your future neighborhood is just a few clicks away</h5>
+				<h4 id="shift" class="header col s12 white-text">Love is like the wind, you can't see it but you can feel it.</h4>
 			</div>
 		</div>
 
@@ -87,9 +87,8 @@
 		<div class="row">
 			<div class="col s12 center">
 				<h3><i class="mdi-content-send blue-grey-text"></i></h3>
-				<h4>How We Did It</h4>
 					<p class="center-align">
-					 Before we were able to collect all our data, we first had to know what data was available, accessible and scalable. This led us to census data, data collected at the state and city level, as well as various API'sincluding Google Maps, Yelp, and Streeteasy. One key requirement, apparent from the outset, was to reference any data we collected to a particular NYC neighborhood. That meant storing data categorized at the neighborhood level. However, more often than not, data available was by geographical coordinates or zip code, leading us to create a mapping to the appropriate neighborhood. </p>
+					To close, I guess I will just say this. Emily I miss you more than anything right now and I know it will probably only get worse as your stay gets later. However, with that said, I want you to enjoy every second you are there and hope you get the most out of your wonderful experience. When you get back I can’t wait to do so many fun and awesome things and spend a great summer together. Until then, not having you around have definitely shaped both my perspective and my plans haha but always remember I love you so much and cant wait to keep hearing about everything you are doing! </p>
 			</div>
 		</div>
 	</div>
@@ -99,7 +98,7 @@
 <div class="parallax-container valign-wrapper">
 		<div class="container">
 			<div class="row left">
-				<h5 id="shift" class="header col s12 white-text">Your future neighborhood is just a few clicks away</h5>
+				<h4 id="shift" class="header col s12 white-text">You are, and always have been, my dream.</h4>
 			</div>
 		</div>
 
@@ -115,8 +114,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col l6 s12">
-				<h5 class="white-text">Company Bio</h5>
-				<p class="grey-text text-lighten-4">We are a team of bootcamp students who created this site as our final project, in under a month. We had a blast building and developing it. We appreciate your support and feedback and hope you enjoy our product!</p>
+				<h5 class="white-text">About</h5>
+				<p class="white-text">Jack Anteby is a rockstar developer with a passion for making cool things. He is currently living in Brooklyn, New York with his wonderful family and amazing girlfriend of 3+ years. This site is dedicated to her as she travels across Europe, enjoy Em!</p>
 				</div>
 			</div>
 		</div>
